--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Interview-Cake JS Test</title>
-	<script type="text/javascript" src="apple_stocks.js"></script>
+	<script type="text/javascript" src="2-inflight_entertainment.js"></script>
 </head>
 <body>
 	<h1>Interview-Cake JS Test</h1>
