--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<title>Interview-Cake JS Test</title>
 	<script type="text/javascript" src="1-10/2-product_of_all_other_nums.js"></script>
 </head>
-<body>
+<body onload="display()">
 	<h1>Interview-Cake JS Test</h1>
 	<div id="result"></div>
 </body>
